--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,18 @@
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
+	
+	<dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-security</artifactId></dependency>
+	<dependency><groupId>org.springframework.security</groupId><artifactId>spring-security-config</artifactId></dependency>
+	<dependency><groupId>org.springframework.security</groupId><artifactId>spring-security-taglibs</artifactId></dependency>
+	<dependency><groupId>org.springframework.security</groupId><artifactId>spring-security-web</artifactId></dependency>
+	<dependency><groupId>org.springframework.security</groupId><artifactId>spring-security-core</artifactId></dependency>
+	
+	<dependency><groupId>mysql</groupId><artifactId>mysql-connector-java</artifactId></dependency>
+	<dependency><groupId>org.hibernate</groupId><artifactId>hibernate-core</artifactId></dependency>
+	<dependency><groupId>org.hibernate</groupId><artifactId>hibernate-entitymanager</artifactId></dependency>
+	<dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-data-jpa</artifactId></dependency>
+		
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
